starter/network.yml
Description: Lab2 - Infrastructure as Code Project - Network

Parameters:
    EnvironmentName:
        Description: "An environment name that will be prefixed to the resources name and also the exports name"
        Type: String
        Default: ""

    VpcCIDR:
        Description: "The VPC CIDR block"
        Type: String
        Default: 10.0.0.0/16

    PublicSubnet1CIDR:
        Description: "Public subnet CIDR block for the AZ1"
        Type: String
        Default: ""

    PublicSubnet2CIDR:
        Description: "Public subnet CIDR block for the AZ2"
        Type: String
        Default: ""

    PrivateSubnet1CIDR:
        Description: "Private subnet CIDR block for the AZ1"
        Type: String
        Default: ""

    PrivateSubnet2CIDR:
        Description: "Private subnet CIDR block for the AZ2"
        Type: String
        Default: ""

Resources:

    VPC:
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: !Ref VpcCIDR
            EnableDnsHostnames: true
            Tags:
                -   Key: Name
                    Value:
                        Fn::Join:
                            - ''
                            -   - !Ref EnvironmentName
                                - "-VPC"

    InternetGateway:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags:
                -   Key: "Name"
                    Value:
                        Fn::Join:
                            - ''
                            -   - !Ref EnvironmentName
                                - "-internet-gateway"

    InternetGatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            InternetGatewayId:
                Ref: "InternetGateway"
            VpcId:
                Ref: "VPC"

    PublicSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId:
                Ref: "VPC"
            AvailabilityZone:
                Fn::Select:
                    - 0
                    -   Fn::GetAZs:
                            Ref: "AWS::Region"
            CidrBlock: !Ref PublicSubnet1CIDR
            MapPublicIpOnLaunch: true
            Tags:
                -   Key: "Name"
                    Value: !Sub ${EnvironmentName} Public Subnet (AZ1)

    PublicSubnet2:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId:
                Ref: "VPC"
            AvailabilityZone:
                Fn::Select:
                    - 1
                    -   Fn::GetAZs:
                            Ref: "AWS::Region"
            CidrBlock: !Ref PublicSubnet2CIDR
            MapPublicIpOnLaunch: true
            Tags:
                -   Key: "Name"
                    Value: !Sub ${EnvironmentName} Public Subnet (AZ2)

    PrivateSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId:
                Ref: "VPC"
            AvailabilityZone:
                Fn::Select:
                    - 0
                    -   Fn::GetAZs:
                            Ref: "AWS::Region"
            CidrBlock: !Ref PrivateSubnet1CIDR
            MapPublicIpOnLaunch: false
            Tags:
                -   Key: "Name"
                    Value: !Sub ${EnvironmentName} Private Subnet (AZ1)

    PrivateSubnet2:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId:
                Ref: "VPC"
            AvailabilityZone:
                Fn::Select:
                    - 1
                    -   Fn::GetAZs:
                            Ref: "AWS::Region"
            CidrBlock: !Ref PrivateSubnet2CIDR
            MapPublicIpOnLaunch: false
            Tags:
                -   Key: "Name"
                    Value: !Sub ${EnvironmentName} Private Subnet (AZ2)

    NatGateway1EIP:
        Type: AWS::EC2::EIP
        Properties:
            Domain: "vpc"

    NatGateway2EIP:
        Type: AWS::EC2::EIP
        Properties:
            Domain: "vpc"

    NatGateway1:
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId:
                Fn::GetAtt: "NatGateway1EIP.AllocationId"
            ConnectivityType: "public"
            SubnetId:
                Ref: "PublicSubnet1"

    NatGateway2:
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId:
                Fn::GetAtt: "NatGateway2EIP.AllocationId"
            ConnectivityType: "public"
            SubnetId:
                Ref: "PublicSubnet2"

    PublicRouteTable1:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId:
                Ref: "VPC"
            Tags:
                -   Key: "Name"
                    Value:
                        Fn::Join:
                            - ''
                            -   - !Ref EnvironmentName
                                - "-public-route-table-"
                                -   Fn::Select:
                                        - 0
                                        -   Fn::GetAZs:
                                                Ref: "AWS::Region"

    PublicRouteTable2:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId:
                Ref: "VPC"
            Tags:
                -   Key: "Name"
                    Value:
                        Fn::Join:
                            - ''
                            -   - !Ref EnvironmentName
                                - "-public-route-table-"
                                -   Fn::Select:
                                        - 1
                                        -   Fn::GetAZs:
                                                Ref: "AWS::Region"

    PublicOutboundRouteTable1:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId:
                Ref: "PublicRouteTable1"
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId:
                Ref: "InternetGateway"

    PublicOutboundRouteTable2:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId:
                Ref: "PublicRouteTable2"
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId:
                Ref: "InternetGateway"

    AssociationPublicSubnet1:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId:
                Ref: "PublicRouteTable1"
            SubnetId:
                Ref: "PublicSubnet1"

    AssociationPublicSubnet2:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId:
                Ref: "PublicRouteTable2"
            SubnetId:
                Ref: "PublicSubnet2"

    PrivateRouteTable1:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId:
                Ref: "VPC"

    PrivateRouteTable2:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId:
                Ref: "VPC"

    PrivateOutboundRouteTable1a:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId:
                Ref: "PrivateRouteTable1"
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId:
                Ref: "NatGateway1"

    PrivateOutboundRouteTable1b:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId:
                Ref: "PrivateRouteTable2"
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId:
                Ref: "NatGateway2"

    AssociationPrivateSubnet1:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId:
                Ref: "PrivateRouteTable1"
            SubnetId:
                Ref: "PrivateSubnet1"

    AssociationPrivateSubnet2:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId:
                Ref: "PrivateRouteTable2"
            SubnetId:
                Ref: "PrivateSubnet2"

Outputs:
    VPC:
        Description: "A reference to the created VPC"
        Value: !Ref VPC
        Export:
            Name: !Sub ${EnvironmentName}-VPCID

    PublicRouteTable1:
        Description: "A reference to the created public route table in the AZ1"
        Value:
            Ref: "PublicRouteTable1"
        Export:
            Name:
                Fn::Join:
                    - ''
                    -   - !Ref EnvironmentName
                        - "-public-route-table-1-"
                        -   Ref: "AWS::Region"

    PublicRouteTable2:
        Description: "A reference to the created public route table in the AZ2"
        Value:
            Ref: "PublicRouteTable2"
        Export:
            Name:
                Fn::Join:
                    - ''
                    -   - !Ref EnvironmentName
                        - "-public-route-table-2-"
                        -   Ref: "AWS::Region"

    PrivateRouteTable1:
        Description: "A reference to the created private route table in the AZ1"
        Value:
            Ref: "PrivateRouteTable1"
        Export:
            Name:
                Fn::Join:
                    - ""
                    -   - !Ref EnvironmentName
                        - "-private-route-table-1-"
                        -   Ref: "AWS::Region"

    PrivateRouteTable2:
        Description: "A reference to the created private route table in the AZ2"
        Value:
            Ref: "PrivateRouteTable2"
        Export:
            Name:
                Fn::Join:
                    - ""
                    -   - !Ref EnvironmentName
                        - "-private-route-table-2-"
                        -   Ref: "AWS::Region"

    PublicSubnet1:
        Description: "A reference to the created public subnet in the AZ1"
        Value:
            Ref: "PublicSubnet1"
        Export:
            Name:
                Fn::Join:
                    - ''
                    -   - !Ref EnvironmentName
                        - "-public-subnet-1-"
                        -   Ref: "AWS::Region"

    PublicSubnet2:
        Description: "A reference to the created public subnet in the AZ2"
        Value:
            Ref: "PublicSubnet2"
        Export:
            Name:
                Fn::Join:
                    - ''
                    -   - !Ref EnvironmentName
                        - "-public-subnet-2-"
                        -   Ref: "AWS::Region"

    PrivateSubnet1:
        Description: "A reference to the created private subnet in the AZ1"
        Value:
            Ref: "PrivateSubnet1"
        Export:
            Name:
                Fn::Join:
                    - ''
                    -   - !Ref EnvironmentName
                        - "-private-subnet-1-"
                        -   Ref: "AWS::Region"

    PrivateSubnet2:
        Description: "A reference to the created private subnet in the AZ2"
        Value:
            Ref: "PrivateSubnet2"
        Export:
            Name:
                Fn::Join:
                    - ''
                    -   - !Ref EnvironmentName
                        - "-private-subnet-2-"
                        -   Ref: "AWS::Region"

    PublicSubnets:
        Description: "A list of the public subnets"
        Value:
            Fn::Join:
                - ","
                -   -   Ref: "PublicSubnet1"
                    -   Ref: "PublicSubnet2"
        Export:
            Name:
                Fn::Join:
                    - ""
                    -   - !Ref EnvironmentName
                        - "-public-subnets-"
                        -   Ref: "AWS::Region"

    PrivateSubnets:
        Description: "A list of the private subnets"
        Value:
            Fn::Join:
                - ","
                -   -   Ref: "PrivateSubnet1"
                    -   Ref: "PrivateSubnet2"
        Export:
            Name:
                Fn::Join:
                    - ""
                    -   - !Ref EnvironmentName
                        - "-private-subnets-"
                        -   Ref: "AWS::Region"

    PublicSubnet1CIDR:
        Description: "Public subnet CIDR block in the AZ1"
        Value:
          !Ref PublicSubnet1CIDR
        Export:
            Name:
                Fn::Join:
                    - ""
                    -   - !Ref EnvironmentName
                        - "-public-subnet-cidr-1-"
                        -   Ref: "AWS::Region"

    PublicSubnet2CIDR:
        Description: "Public subnet CIDR block in the AZ2"
        Value:
          !Ref PublicSubnet2CIDR
        Export:
            Name:
                Fn::Join:
                    - ""
                    -   - !Ref EnvironmentName
                        - "-public-subnet-cidr-2-"
                        -   Ref: "AWS::Region"
